--- a/prime_one/css/style.css
+++ b/prime_one/css/style.css
@@ -676,6 +676,7 @@ img {
 
 .header__logo {
   padding: 0 10px;
+  cursor: pointer;
 }
 
 .header__navs {
@@ -1315,6 +1316,10 @@ img {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+  }
+
+  .header__logo-mobile-pic {
+    cursor: pointer;
   }
 }
 
